<resources>
    <string name="app_name">Pitagora_app_2.0.1</string>
    <string name="btn_start">Start</string>
    <string name="btn_glossary">Glosario</string>
    <string name="btn_probabilidad">Probabilidad</string>
    <string name="btn_algebra">Algebra</string>
    <string name="btn_geometria">geometria</string>
    <string name="btn_numeros">numeros</string>
    <string name="btn_back">volver al menu principal</string>
    <string name="btn_geometria_selector">geometria</string>
    <string name="btn_random">random</string>
    <string name="title_selector">seleccione un nivel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit_done">Edit Done</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="numero">Numero</string>
    <string name="login">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="puntaje">Puntaje</string>
    <string name="nombreUsuario">Nombre de Usuario</string>
    <string name="tienda">Tienda</string>
    <string name="recuperar">recuperar</string>
    <string name="precio">precio</string>
    <string name="Tiendita">"Tiendita"</string>
    <string name="confirmar">confirmar contraseña</string>
    <string name="codigo">codigo de confirmacion</string>
    <string name="btn_cambiar">cambiar</string>
</resources>