<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlosarioInicioActivity"
    android:background="@drawable/fondo">

    <Button
        android:id="@+id/btn_Probabilidad"
        android:layout_width="291dp"
        android:layout_height="73dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn_probabilidad"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_algebra"
        android:layout_width="291dp"
        android:layout_height="73dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="228dp"
        android:text="@string/btn_algebra"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_geometria"
        android:layout_width="291dp"
        android:layout_height="73dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="328dp"
        android:text="@string/btn_geometria"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_numeros"
        android:layout_width="291dp"
        android:layout_height="73dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="436dp"
        android:text="@string/btn_numeros"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/select"
        android:layout_width="337dp"
        android:layout_height="60dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="36dp"
        android:shadowColor="#FF0000"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="20"
        android:text='@string/btn_glossary'
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>